fix: [header component] ~ logo's z-index

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -29,5 +29,6 @@
   &__logo {
     position: absolute;
     top: 0;
+    z-index: 100;
   }
 }
